<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_drawable"
    tools:context=".CalibrationActivity">


    <TextView
        android:id="@+id/calibration_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kalibracja"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="327dp"
        android:layout_height="57dp"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calibration_text" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        style="@style/CardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_calibration"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calibration_buttons_desc"
            android:layout_marginTop="110dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp"
            android:text="Aby wykonać kalibracje podłącz słuchawki !"
            android:padding="20dp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startButton"
        android:layout_width="125dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/btn_shape2"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:onClick="onCalibrationClick"
        android:paddingVertical="15dp"
        android:text="@string/start_calibration"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card1"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/stopButton"
        android:layout_width="127dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/btn_shape2"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:onClick="onStopClick"
        android:paddingVertical="15dp"
        android:text="@string/stop_calibration"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/calibrationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/startButton"
        app:layout_constraintTop_toBottomOf="@id/card1"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calibrationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_shape2"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:onClick="onHearSound"
        android:paddingVertical="15dp"
        android:text="@string/hear_sound"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startButton"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/calibration_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:text="Calibration in progress..."
        android:textColor="@color/white"
        android:background="@color/red"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calibrationButton"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>